--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         </div>
       </div>
 
+      <!--Filter and Table-->
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-3">
@@ -76,19 +77,31 @@
                 <p>Filter Search</p>
                 <ul class="bg-dark">
 
-                    <li class="list-group" class="btn-dark">
-                        <label for="date">Enter Date</label>
-                        <input type="text" placeholder="1/10/2010" id="datetime" />
+                    <!-- CHALLENGE NEED - Filter Using New <form> Tag-->
+                        <li class="list-group" class="btn-dark">
+                                <label for="datetime">Enter Date</label>
+                                <input type="text" placeholder="1/10/2010" id="datetime" />
+                        </li>
 
-                    </li>
+                        <li class="list-group" class="btn-dark">
+                            <label for="city">Enter City</label>
+                            <input type="text" placeholder="benton" id="city">
+                        </li>
 
+                        <li class="list-group" class="btn-dark">
+                            <label for="state">Enter State</label>
+                            <input type="text" placeholder="ar" id="state">
+                        </li>
 
-                    <li class="list-group" class="btn-dark">
-                        <button id="filter-btn" type="button" class="btn-dark">
-                        Filter Table
-                        </button>
+                        <li class="list-group" class="btn-dark">
+                            <label for="country">Enter Country</label>
+                            <input type="text" placeholder="us" id="country">
+                        </li>
 
-                    </li>
+                        <li class="list-group" class="btn-dark">
+                            <label for="shape">Enter Shape</label>
+                            <input type="text" placeholder="circle" id="shape">
+                        </li>
 
                 </ul>
               </form>
